--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@
 
         <div class="section-title">
           <h2>Resume</h2>
+          <a href="assets/documents/Shawn's Resume.jpg" download>Click here to download a detailed Resume.</a>
         </div>
-
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Shawn Ragel</h4>
-              <p><em>Innovative and deadline-driven Enthusiastic Web Developer with 1 year of experience as a Junior Software Developer and an IT Executive</em></p>
+              <p><em>Innovative and deadline-driven Enthusiastic Web Developer with 1 year of experience as a Junior Software Developer and an IT Executive. </em></p>
               <ul>
                 <li>Kadawatha , Sri Lanka</li>
                 <li>(+94) 77 414 8832</li>
