--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               <ul>
                 <li>Kadawatha , Sri Lanka</li>
                 <li>(+94) 77 414 8832</li>
-                <li>shaenrgl10@gmail.com</li>
+                <li>shawnrgl10@gmail.com</li>
               </ul>
             </div>
 
