--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <a href="assets/documents/Shawn's Resume.jpg" download>Click here to download a detailed Resume.</a>
+          <a href="assets/documents/Shawn's Resume.pdf" download>Click here to download a detailed Resume.</a>
         </div>
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
