Corrected Email Spelling

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 23</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> BSc  Special Hons in IT</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> shawnrgl10@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> shawnrgl10@gmail.com</li>
                 </ul>
               </div>
             </div>
