Added the Project logos

--- a/index.html
+++ b/index.html
@@ -260,18 +260,24 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>During the Period of following the degree and in the Learning curve of Programming Languages we Developed Applications as a Group.</p>
         </div>
 
   
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
+		<a href="https://shawnrgl.github.io/roboEnt/">
+		  <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">               
+              </div>
+            </div>
+          </div>
+		  
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">               
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx">Fix It</i></a>
               </div>
             </div>
           </div>
@@ -280,7 +286,6 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">               
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx">Sithroo Catering Sys</i></a>
               </div>
             </div>
           </div>
@@ -289,7 +294,6 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">               
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx">JellyFish Gaming Store</i></a>
               </div>
             </div>
           </div>
